--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -42,7 +42,7 @@ body {
     height: 500px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
 }
 
 .todoApp header {
@@ -92,7 +92,6 @@ body {
     border: none;
     position: relative;
     cursor: pointer;
-    transition: all 0.4s ease-out;
 }
 
 .todoApp .createNew div:first-child button::after {
@@ -108,4 +107,15 @@ body {
 
 .todoApp .createNew div:first-child button:hover {
     background: linear-gradient(90deg, rgba(87,221,255,1) 0%, rgba(192,88,243,1) 100%);
+}
+
+.todoApp .createNew div:last-child input{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    padding-left: 10px;
+    color: var(--text);
+    outline: none;
+    font-size: 16px;
 }
