--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -85,8 +85,8 @@ body {
 }
 
 .todoApp .createNew .left-side button{
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: #ffffff46;
     border-radius: 50%;
     border: none;
@@ -96,8 +96,8 @@ body {
 
 .todoApp .createNew .left-side button::after {
     content: "";
-    width: 18px;
-    height: 18px;
+    width: 23px;
+    height: 23px;
     background-color: var(--cardbg);
     position: absolute;
     top: 1px;
@@ -123,13 +123,13 @@ body {
 /* =-=-=-= todo table =-=-=-= */
 .todoApp .container {
     border-radius: 5px;
-    overflow: hidden;
+    background-color: var(--cardbg);
+    padding: 2px;
 }
 
 .todoApp .container .todo {
     width: 100%;
     height: 50px;
-    background-color: var(--cardbg);
     display: grid;
     grid-template-columns: 1fr 9fr;
     border-bottom: 1px solid var(--darktext);
@@ -153,8 +153,8 @@ body {
 }
 
 .todoApp .container .todo .left-side label {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     position: relative;
     cursor: pointer;
@@ -174,8 +174,8 @@ body {
 
 .todoApp .container .todo .left-side input:not(:checked) ~ label::after {
     content: "";
-    width: 18px;
-    height: 18px;
+    width: 23px;
+    height: 23px;
     background-color: var(--cardbg);
     position: absolute;
     top: 1px;
@@ -185,16 +185,15 @@ body {
 
 .todoApp .container .todo .left-side input:checked ~ label::before {
     content: "✔";
-    width: 18px;
-    height: 18px;
     position: absolute;
+    font-size: 20px;
     top: 1px;
-    right: -2px;
-    border-radius: 50%;
+    left: 3px;
     color: white;
 }
 
 .todoApp .container .todo .right-side {
+    width: 100%;
     display: flex;
     align-items: center;
     padding-left: 10px;
