--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -195,6 +195,7 @@ body {
     align-items: center;
     padding-left: 10px;
     color: var(--text);
+    font-size: 18px;
 }
 
 /* =-=-=-= Filters bar =-=-=-= */
