check function update

--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -198,6 +198,10 @@ body {
     font-size: 18px;
 }
 
+.todoApp .container .todo .right-side span {
+    cursor: pointer;
+}
+
 /* =-=-=-= Filters bar =-=-=-= */
 
 .todoApp .bottomBar {
