--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -181,11 +181,15 @@ body {
 }
 
 .todoApp .container .todo .left-side input:checked ~ label::before {
-    content: "✔";
+    content: "";
+    width: 15px;
+    height: 15px;
+    background-image: url(assets/images/icon-check.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
-    font-size: 20px;
-    top: 1px;
-    left: 3px;
+    top: 5px;
+    left: 4px;
     color: white;
 }
 
