--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -97,10 +97,15 @@ body {
 }
 
 .todoApp .createNew .left-side button::after {
-    content: "";
+    content: "+";
     width: 23px;
     height: 23px;
     background-color: var(--cardbg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: var(--lighttext);
     position: absolute;
     top: 1px;
     right: 1px;
