--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -138,7 +138,7 @@ body {
     width: 100%;
     height: 50px;
     display: grid;
-    grid-template-columns: 1fr 9fr;
+    grid-template-columns: 1fr 8fr 1fr;
     border-bottom: 1px solid var(--darktext);
 }
 
@@ -200,7 +200,7 @@ body {
     color: white;
 }
 
-.todoApp .container .todo .right-side {
+.todoApp .container .todo .center {
     width: 100%;
     display: flex;
     align-items: center;
@@ -209,8 +209,28 @@ body {
     font-size: 18px;
 }
 
-.todoApp .container .todo .right-side span {
+.todoApp .container .todo .center span {
     cursor: pointer;
+}
+
+.todoApp .container .todo .right-side {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.todoApp .container .todo .right-side button {
+    width: 15px;
+    height: 15px;
+    background-color: transparent;
+    border: none;
+    background-image: url(assets/images/icon-cross.svg);
+    background-size: cover;
+    cursor: pointer;
+}
+
+.todoApp .container .todo .right-side button:hover {
+    filter: brightness(200%);
 }
 
 /* =-=-=-= Filters bar =-=-=-= */
