--- a/Project 18 - Launch countdown timer/style.css
+++ b/Project 18 - Launch countdown timer/style.css
@@ -1,13 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;500;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Red Hat Text", sans-serif;
 }
 
 body {
     height: 100vh;
     background-color: #201E29;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 body::before {
@@ -17,6 +24,7 @@ body::before {
     position: absolute;
     background-image: url(assets/images/bg-stars.svg);
     background-repeat: no-repeat;
+    z-index: -1;
 }
 
 body::after {
@@ -28,4 +36,20 @@ body::after {
     background-repeat: no-repeat;
     background-position-y: bottom;
     top: 0;
+    z-index: -1;
+}
+
+.countdown {
+    width: 800px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.countdown h1 {
+    font-size: 22px;
+    letter-spacing: 10px;
+    color: #FFF;
 }
