--- a/Project 18 - Launch countdown timer/style.css
+++ b/Project 18 - Launch countdown timer/style.css
@@ -40,7 +40,7 @@ body::after {
 }
 
 .countdown {
-    width: 800px;
+    width: 700px;
     height: 400px;
     display: flex;
     flex-direction: column;
@@ -52,4 +52,61 @@ body::after {
     font-size: 22px;
     letter-spacing: 10px;
     color: #FFF;
+}
+
+.countdown .container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+
+.countdown .container .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.countdown .container .card .box {
+    width: 150px;
+    height: 150px;
+    background-color: #343650;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5.5rem;
+    font-weight: 700;
+    color: #fb6087;
+    position: relative;
+    box-shadow: 0 10px hsl(234, 17%, 12%);
+    overflow: hidden;
+}
+
+.countdown .container .card .box::before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #1e1f29;
+    position: absolute;
+}
+
+.countdown .container .card .box::after {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #1e1f29;
+    border-radius: 50%;
+    position: absolute;
+    left: -5px;
+    box-shadow:  150px 0 #1e1f29;
+}
+
+.countdown .container .card span {
+    font-size: 14px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #8486a9;
 }
