--- a/Project 18 - Launch countdown timer/style.css
+++ b/Project 18 - Launch countdown timer/style.css
@@ -15,6 +15,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 50px;
 }
 
 body::before {
@@ -40,18 +41,17 @@ body::after {
 }
 
 .countdown {
-    width: 700px;
     height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
 }
 
 .countdown h1 {
     font-size: 22px;
     letter-spacing: 10px;
     color: #FFF;
+    margin-bottom: 70px;
 }
 
 .countdown .container {
@@ -69,14 +69,14 @@ body::after {
 }
 
 .countdown .container .card .box {
-    width: 150px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
     background-color: #343650;
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 5.5rem;
+    font-size: 5rem;
     font-weight: 700;
     color: #fb6087;
     position: relative;
@@ -109,4 +109,13 @@ body::after {
     text-transform: uppercase;
     font-weight: 700;
     color: #8486a9;
+}
+
+.social {
+    display: flex;
+    gap: 25px;
+}
+
+.social a img{
+    width: 25px;
 }
