--- a/Project 19 - Rock Paper Scissor/style.css
+++ b/Project 19 - Rock Paper Scissor/style.css
@@ -186,11 +186,11 @@ body {
 
 /* =-=-=-=-= End Game =-=-=-= */
 .gameContainer .gameTable.end {
-    width: 700px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 50px;
+    transform: translateX(10px);
 }
 
 .gameContainer .gameTable.end .box {
@@ -215,7 +215,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    transform: translateY(10px);
+    transform: translate(20px, 10px);
 }
 
 .gameContainer .gameTable.end .endGame span {
@@ -231,4 +231,19 @@ body {
     color: red;
     font-weight: 600;
     cursor: pointer;
+}
+
+.gameContainer .gameTable.end div:nth-child(1), 
+.gameContainer .gameTable.end div:nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.gameContainer .gameTable.end div:nth-child(1) span:nth-child(1),
+.gameContainer .gameTable.end div:nth-child(3) span:nth-child(1) {
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 2px;
 }
