--- a/Project 19 - Rock Paper Scissor/style.css
+++ b/Project 19 - Rock Paper Scissor/style.css
@@ -216,6 +216,15 @@ body {
     align-items: center;
     gap: 10px;
     transform: translate(20px, 10px);
+    animation: creation 0.3s ease-in;
+}
+
+@keyframes creation {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
 }
 
 .gameContainer .gameTable.end .endGame span {
