--- a/Project 23 - Dev Challenges - part 2/recipe page/style.css
+++ b/Project 23 - Dev Challenges - part 2/recipe page/style.css
@@ -10,8 +10,14 @@ font-family: 'Playfair Display', serif; */
 }
 
 body {
-    padding: 0 200px;
     overflow-x: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    width: 90%;
+    max-width: 1000px;
 }
 
 /* =-=-=-=-= Header =-=-=-=-= */
@@ -49,7 +55,7 @@ header p::after {
 
 main figure {
     width: 100%;
-    height: 500px;
+    margin-bottom: 50px;
 }
 
 main figure img {
@@ -60,6 +66,7 @@ main .preparation {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-direction: row-reverse;
 }
 
 /* =-=-=-=-= Ingredients =-=-=-=-= */
@@ -187,4 +194,31 @@ main .cards .card .text span:last-child {
 
 main .cards .card:first-child .text span:last-child {
     color: #f2994a;
+}
+
+/* =-=-=-=-= Responsividade =-=-=-=-= */
+@media screen and (max-width: 400px) {
+    main .preparation {
+        display: block;
+    }
+
+    main .cards {
+        width: 100%;
+        display: grid;
+        grid-template: 1fr 1fr / 1fr 1fr;
+    }
+
+    main .cards .card img {
+        width: 25px;
+        height: 25px;
+    }
+
+    main .cards .card span {
+        font-size: 25px;
+    }
+
+    main .cards .card .text {
+        display: flex;
+        flex-direction: column;
+    }
 }
