--- a/Project 23 - Dev Challenges - part 2/recipe page/style.css
+++ b/Project 23 - Dev Challenges - part 2/recipe page/style.css
@@ -198,6 +198,10 @@ main .cards .card:first-child .text span:last-child {
 
 /* =-=-=-=-= Responsividade =-=-=-=-= */
 @media screen and (max-width: 400px) {
+    header h1 {
+        font-size: 25px;
+    }
+
     main .preparation {
         display: block;
     }
